--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,11 @@
 name: Release
 
-on:
-  push:
-    branches:
-    - 'release-*'
+on: push
 
 jobs:
-  build:
+  release:
+    if: ${{startsWith(github.ref, "refs/tags/release-")}}
+
     runs-on: ubuntu-latest
 
     steps:
