--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,5 +10,14 @@ jobs:
     - uses: actions/checkout@v2
     - name: Get release version
       run: echo "::set-env name=RELEASE_VERSION::$(echo $GITHUB_REF | sed 's/refs\/tags\/release-//')"
-    - name: Print release version
-      run: echo "Gonna release ${{ env.RELEASE_VERSION }}!"
+    - name: Setup Maven
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+        server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
+    - name: Prepare release
+      run: mvn release:prepare -B -DreleaseVersion=${{ env.RELEASE_VERSION }}
+    - name: Perform release
+      run: mvn release:perform -B
