--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,5 +19,7 @@ jobs:
         server-password: MAVEN_PASSWORD
     - name: Prepare release
       run: mvn release:prepare -B -DreleaseVersion=${{ env.RELEASE_VERSION }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Perform release
       run: mvn release:perform -B
