--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,9 @@ jobs:
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
     - name: Prepare release
-      run: mvn release:prepare -B -DreleaseVersion=${{ env.RELEASE_VERSION }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git config --local user.email "gytis@redhat.com"
+        git config --local user.name "Gytis Trikleris"
+        mvn release:prepare -B -DreleaseVersion=${{ env.RELEASE_VERSION }}
     - name: Perform release
       run: mvn release:perform -B
