--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Get release version
-      run: echo "::set-env name=RELEASE_VERSION::$(echo $GITHUB_REF | sed 's/refs\/tags\/release-//')"
+    - name: Setup environment variables
+      run: |
+        releaseVersion=$(echo $GITHUB_REF | sed 's/refs\/tags\/release-//')
+        echo "::set-env name=RELEASE_VERSION::${releaseVersion}"
+        echo "::set-env name=TEMP_BRANCH::temp-${releaseVersion}"
     - name: Setup Maven
       uses: actions/setup-java@v1
       with:
@@ -17,11 +20,17 @@ jobs:
         server-id: ossrh
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
-    - name: Prepare release
+    - name: Setup git
       run: |
         git config --local user.email "gytis@redhat.com"
         git config --local user.name "Gytis Trikleris"
-        git checkout master
-        mvn release:prepare -B -DreleaseVersion=${{ env.RELEASE_VERSION }}
+        git checkout -B ${{env.TEMP_BRANCH}}
+    - name: Prepare release
+      run: mvn release:prepare -B -DreleaseVersion=${{env.RELEASE_VERSION}}
     - name: Perform release
       run: mvn release:perform -B
+    - name: Cleanup git
+      run: |
+        git checkout ${{ env.GITHUB_REF }}
+        git branch -D ${{env.TEMP_BRANCH}}
+
