--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
             <version>2.5.3</version>
             <configuration>
               <autoVersionSubmodules>true</autoVersionSubmodules>
+              <tagNameFormat>@{project.version}</tagNameFormat>
               <releaseProfiles>release</releaseProfiles>
               <goals>deploy</goals>
             </configuration>
