--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -10,4 +10,4 @@ jobs:
     - name: Maven release action
       uses: gytis/maven-release-action@master
       with:
-        releaseVersion: some version
+        token: ${{ env.GITHUB_TOKEN }}
