Take github token from a secret

--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -10,4 +10,4 @@ jobs:
     - name: Maven release action
       uses: gytis/maven-release-action@master
       with:
-        token: ${{ env.GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
