--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Maven release action
+name: release
 on:
   push:
     branches: [ master ]
@@ -7,8 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Maven release action
+    - name: release
       uses: gytis/maven-release-action@master
       with:
         email: gytis@redhat.com
         profiles: release
+        doNotDeploy: true
