--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,18 @@
 name: Release
 on:
   push:
-    branches: [ master ]
+    branches: [ release/release-* ]
 jobs:
-  build:
+  release:
+    if: ${{startsWith(github.ref, 'refs/tags/release-')}}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Set release version
+      run: echo "::set-env name=RELEASE_VERSION::${echo $GITHUB_REF | sed 's/refs\/tags\/release-//'}"
     - name: Release
       uses: gytis/maven-release-action@master
       with:
         email: gytis@redhat.com
         profiles: release
+        releaseVersion: ${{env.RELEASE_VERSION}}
