--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,6 @@
 name: Release
 on:
-  push:
-    branches: [ release/release-* ]
+  create
 jobs:
   release:
     if: ${{startsWith(github.ref, 'refs/tags/release-')}}
