--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set release version
-      run: echo "::set-env name=RELEASE_VERSION::${echo $GITHUB_REF | sed 's/refs\/tags\/release-//'}"
+      run: |
+        releaseVersion=$(echo $GITHUB_REF | sed 's/refs\/tags\/release-//')
+        echo "::set-env name=RELEASE_VERSION::${releaseVersion}"
     - name: Release
       uses: gytis/maven-release-action@master
       with:
