--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,28 @@
 name: Release
-on:
-  create
+on: create
 jobs:
   release:
     if: ${{startsWith(github.ref, 'refs/tags/release-')}}
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set release version
-      run: |
-        releaseVersion=$(echo $GITHUB_REF | sed 's/refs\/tags\/release-//')
-        echo "::set-env name=RELEASE_VERSION::${releaseVersion}"
-    - name: Release
-      uses: gytis/maven-release-action@master
-      with:
-        email: gytis@redhat.com
-        profiles: release
-        releaseVersion: ${{env.RELEASE_VERSION}}
+      - uses: actions/checkout@v2
+      - name: Setup Maven
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+          server-id: ossrh
+          server-username: SONATYPE_USERNAME
+          server-password: SONATYPE_PASSWORD
+      - name: Set release version
+        run: |
+          releaseVersion=$(echo $GITHUB_REF | sed 's/refs\/tags\/release-//')
+          echo "::set-env name=RELEASE_VERSION::${releaseVersion}"
+      - name: Release
+        uses: gytis/maven-release-action@master
+        with:
+          email: gytis@redhat.com
+          profiles: release
+          releaseVersion: ${{env.RELEASE_VERSION}}
+        env:
+          SONATYPE_USERNAME: ${{secrets.SONATYPE_USERNAME}}
+          SONATYPE_PASSWORD: ${{secrets.SONATYPE_PASSWORD}}
